namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-data-platform-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-electronic-monitoring-data-platform-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-electronic-monitoring"
    cloud-platform.justice.gov.uk/application: "Electronic monitoring data platform API"
    cloud-platform.justice.gov.uk/owner: "hmpps-electronic-monitoring: hmpps-ems-platform-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-data-platform-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-electronic-monitoring"
    cloud-platform.justice.gov.uk/review-after: ""
